--- a/rapport/src/3_conception/1_sequence.tex
+++ b/rapport/src/3_conception/1_sequence.tex
@@ -1,1 +1,30 @@
-\subsection{Diagramme de séquence}
+\subsection{Diagrammes de séquence}
+
+    \begin{figure}[ht!]
+        \centering
+            \includegraphics[width=1\textwidth]{images/Authentification.png}
+        \caption{Diagramme de séquence de l'authentification d'un utilisateur}
+    \end{figure}
+
+    \begin{figure}[ht!]
+        \centering
+            \includegraphics[width=0.8\textwidth]{images/AmeliorerHeros.png}
+        \caption{Diagramme de séquence de l'amélioration d'un héros}
+    \end{figure}
+
+    \newpage
+
+    \begin{figure}[ht!]
+        \centering
+            \includegraphics[width=0.65\textwidth]{images/invocationHeros.png}
+        \caption{Diagramme de séquence de l'invocation d'un héros}
+    \end{figure}
+
+
+    \begin{figure}[ht!]
+        \centering
+            \includegraphics[width=0.65\textwidth]{images/gainArgent.png}
+        \caption{Diagramme de séquence du gain d'argent}
+    \end{figure}
+
+
